--- a/css/shared.css
+++ b/css/shared.css
@@ -10,6 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .h--1,
@@ -61,6 +62,9 @@
   font-size: 1rem;
   line-height: calc(19rem/16);
   letter-spacing: 2.7px;
+  font-family: 'Barlow Condensed', sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 .body--text {
   font-size: calc(18rem/16);
@@ -73,6 +77,12 @@
   margin-top: 5.27%;
   margin-left: 11.53%;
   margin-bottom: 64px;
+  font-size: calc(28rem/16);
+  line-height: calc(33.6rem/16);
+  letter-spacing: 4.72px;
+  font-weight: 400;
+  font-family: 'Barlow Condensed', sans-serif;
+  text-transform: uppercase;
 }
 .number {
   margin-right: calc(26rem/16);
