--- a/css/crew.css
+++ b/css/crew.css
@@ -92,6 +92,8 @@ h1.header {
     text-align: center;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    min-height: 423px;
   }
   .container__col1 h2 {
     margin-top: 2%;
@@ -134,6 +136,7 @@ h1.header {
     }
     .container__col1 {
       order: 2;
+      justify-content: flex-start;
     }
     .container__col1 h2 {
       order: 2;
@@ -153,12 +156,15 @@ h1.header {
       display: flex;
       justify-content: center;
       width: 70%;
-      align-self: center;
+      align-self: flex-end;
       order: 1;
+      align-items: flex-end;
     }
-    .img--container {
+    .container__col2.img--container {
       position: relative;
       inset: 0;
+      min-height: 239.717px;
+      align-self: center;
     }
     .img--container::after {
       content: "";
