--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,12 @@
   transition: .3s;
 }
 
+@media (min-width: 91rem) {
+  .main {
+    margin-top: 8.5%;
+  }
+}
+
 @media(max-width: 60rem) {
   .all {
     background-image: url("assets/home/background-home-tablet.jpg");
